Use full JDK